===== CHANGELOG =====
Zollern Galaxy v2.0.24
=====================

* Added new star system Pantheon, with new planet Vortex, a super-storm planet.
    - To get to it, Players must use the Eden Star Gate while on Exodus.
* Updated Chinese translations from EndsM.
* 