@@ -405,6 +405,7 @@ tile.compressedrhodiumblock.name=Block of Compressed Rhodium
 tile.compressedzucriteblock.name=Block of Compressed Zucrite
 
 tile.plutoniumcrystals.name=Plutonium Crystals
+tile.stormcrystals.name=Storm Crystals
 
 ## Fluids ##
 
